--- a/iwlwifi.conf
+++ b/iwlwifi.conf
@@ -1,4 +1,4 @@
-options iwlwifi led_mode=1 power_save=0 11n_disable=8 swcrypto=1
+options iwlwifi led_mode=2 power_save=0 power_level=5 11n_disable=1 swcrypto=0
 
 # parm:           swcrypto:using crypto in software (default 0 [hardware]) (int)
 # parm:           11n_disable:disable 11n functionality, bitmap: 1: full, 2: disable agg TX, 4: disable agg RX, 8 enable agg TX (uint)
@@ -8,8 +8,8 @@ options iwlwifi led_mode=1 power_save=0 11n_disable=8 swcrypto=1
 # parm:           wd_disable:Disable stuck queue watchdog timer 0=system default, 1=disable (default: 1) (int)
 # parm:           nvm_file:NVM file name (charp)
 # parm:           uapsd_disable:disable U-APSD functionality (default: Y) (bool)
-parm:           bt_coex_active:disable wifi/bt co-exist (default: enable) (bool)
+# parm:           bt_coex_active:disable wifi/bt co-exist (default: enable) (bool)
 # parm:           led_mode:0=system default, 1=On(RF On)/Off(RF Off), 2=blinking, 3=Off (default: 0) (int)
-parm:           power_save:disable WiFi power management (default: disable) (bool)
+# parm:           power_save:disable WiFi power management (default: disable) (bool)
 # parm:           power_level:default power save level (range from 1 - 5, default: 1) (int)
 # parm:           fw_monitor:firmware monitor - to debug FW (default: false - needs lots of memory) (bool)
