--- a/i3/config
+++ b/i3/config
@@ -158,7 +158,16 @@ client.urgent           $base02 $base08    $base00 $base0F
 bar {
   position top
   status_command i3blocks
-	# i3status
+  colors {
+    separator  $base03
+    background $base01
+    statusline $base05
+    #                  border  background text
+    focused_workspace  $base01 $base01    $base07
+    active_workspace   $base01 $base02    $base03
+    inactive_workspace $base01 $base01    $base03
+    urgent_workspace   $base01 $base01    $base08
+    }
 }
 
 # compton
