--- a/polybar/config
+++ b/polybar/config
@@ -22,6 +22,9 @@ foreground = ${colors.foreground}
 tray-position = right
 tray-padding = 2
 
+scroll-up = i3wm-wsnext
+scroll-down = i3wm-wsprev
+
 module-margin-left = 1
 module-margin-right = 1
 
@@ -37,19 +40,32 @@ wrapping-scroll = true
 strip-wsnumbers = true
 pin-workspaces = true
 
-label-mode-padding = 5
 label-mode-foreground = #ffffff
+label-mode-padding = 1
 
+label-unfocused = %icon%
 label-unfocused-foreground = #888888
 label-unfocused-padding = 1
 
-label-visible-foregroud = #888888
+label-visible = %icon%
+label-visible-foreground = #888888
 label-visible-padding = 1
 
+label-focused = %icon%
 label-focused-foreground = #ffffff
 label-focused-padding = 1
 
+label-urgent = %icon%
+label-urgent-foreground = #EE3667
 label-urgent-padding = 1
+
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;
+ws-icon-3 = 4;
+ws-icon-4 = 5;
+ws-icon-5 = 6;
+ws-icon-6 = 7;
 
 [module/mpd]
 type = internal/mpd
@@ -168,26 +184,28 @@ bar-volume-empty-foreground =
 type = internal/battery
 battery = BAT0
 adapter = ADP1
-full-at = 98
+full-at = 99
 
 format-charging = <animation-charging> <label-charging>
 format-charging-underline = #ffb52a
-
 format-discharging = <ramp-capacity> <label-discharging>
-format-discharging-underline = ${self.format-charging-underline}
-
-format-full-prefix = " "
-format-full-prefix-foreground = ${colors.foreground}
-format-full-underline = ${self.format-charging-underline}
+format-full = <ramp-capacity>  <label-full>
+label-charging = %percentage%%
+label-discharging = %percentage%%
+label-full = %percentage%%
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
 ramp-capacity-foreground = ${colors.foreground}
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
 animation-charging-foreground = ${colors.foreground}
 animation-charging-framerate = 750
 
