--- a/i3/config
+++ b/i3/config
@@ -6,6 +6,10 @@
 set $mod Mod4
 set $alt Mod1
 
+# g a p s
+gaps outer 5
+gaps inner 5
+
 # workspace
 # set $workspace1 "1: "
 # set $workspace2 "2: "
@@ -35,7 +39,7 @@ bindsym $mod+Return exec i3-sensible-terminal
 bindsym $alt+F4 kill
 
 # rofi- program launcher
-bindsym $mod+space exec rofi -font "Ubuntu Mono 11" -show run
+bindsym $mod+space exec rofi -font "Roboto Mono for Powerline 10" -show run
 
 # switching between workspaces
 workspace_auto_back_and_forth yes
@@ -112,7 +116,7 @@ bindsym $mod+Escape exec "i3-nagbar -t warning -m 'logout?' -b 'yes' 'i3-msg exi
 # startup applications
 exec_always compton -f
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-exec --no-startup-id $HOME/scripts/randomWallpaper.sh
+# exec --no-startup-id $HOME/scripts/randomWallpaper.sh => do not need until more wallpapers are added
 exec nitrogen --restore &
 exec i3-sensible-terminal
 
