--- a/polybar/config
+++ b/polybar/config
@@ -1,184 +1,105 @@
 [colors]
-background = #222
-foreground = #dfdfdf
+background = #CC1D1F21
+foreground = #C5C8C6
 
 [bar/main]
+
+; display output & colors
 monitor = "LVDS-1"
-
-; bar dimensions
-width = 100%
-height = 25
-padding-left = 1
-padding-right = 1
-fixed-center = true
-
-font-0 = "Ubuntu Mono:size=11;0"
-font-1 = "Ubuntu Mono:size=11;0"
-font-2 = "FontAwesome:size=9;0"
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-; system tray
-tray-position = right
-tray-padding = 2
+; bar dimension & position
+width = 100%
+height = 20
+bottom = false
+padding = 1 ; padding on the edges of the bar
 
-scroll-up = i3wm-wsnext
-scroll-down = i3wm-wsprev
+; fonts
+font-0 = "Roboto Mono for Powerline:size=9"
+font-1 = "Mamelon:size=9"
+font-2 = "FontAwesome:size=9"
 
-module-margin-left = 1
-module-margin-right = 1
+; underline
+underline-size = 4
 
-modules-left = i3
+; module positions
+modules-left = powermenu separator i3 separator mpd
 modules-center = date
-modules-right = wlan volume cpu memory battery
+modules-right = wlan separator volume separator battery
+
+[module/separator]
+type = custom/text
+content = " / "
+
+[module/powermenu]
+type = custom/menu
+format-spacing = 1
+
+label-open = "  "
+label-open-underline = #CC6666
+label-close = [cancel]
+
+menu-0-0 = [reboot]
+menu-0-0-exec = reboot
+
+menu-0-1 = [power off]
+menu-0-1-exec = poweroff
 
 [module/i3]
 type = internal/i3
-format = <label-state> <label-mode>
 index-sort = true
 wrapping-scroll = true
 strip-wsnumbers = true
 pin-workspaces = true
-
-label-mode-foreground = #ffffff
-label-mode-padding = 1
+format = <label-state> <label-mode>
 
 label-unfocused = %icon%
-label-unfocused-foreground = #888888
 label-unfocused-padding = 1
 
-label-visible = %icon%
-label-visible-foreground = #888888
-label-visible-padding = 1
-
 label-focused = %icon%
-label-focused-foreground = #ffffff
+label-focused-foreground = #7193B1
+label-focused-underline = #81A2BE
 label-focused-padding = 1
 
 label-urgent = %icon%
-label-urgent-foreground = #EE3667
+label-urgent-foreground = #CC6666
 label-urgent-padding = 1
 
-ws-icon-0 = 1;
+ws-icon-0 = 1;
 ws-icon-1 = 2;
 ws-icon-2 = 3;
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;
+ws-icon-3 = 4;
+ws-icon-4 = 5;
+ws-icon-5 = 6;
 ws-icon-6 = 7;
-
-[module/mpd]
-type = internal/mpd
-format-online = <label-song>  <icon-prev> <icon-stop> <toggle> <icon-next>
-
-icon-prev = 
-icon-stop = 
-icon-play = 
-icon-pause = 
-icon-next = 
-
-label-song-maxlen = 25
-label-song-ellipsis = true
-
-
-[module/backlight-acpi]
-type = internal/backlight
-card = intel_backlight
-
-format = <label> <bar>
-label = 
-
-bar-width = 10
-bar-indicator = |
-bar-indicator-foreground = #ff
-bar-indicator-font = 2
-bar-fill = ─
-bar-fill-font = 2
-bar-fill-foreground = #9f78e1
-bar-empty = ─
-bar-empty-font = 2
-bar-empty-foreground = ${colors.foreground-alt}
-
-
-[module/cpu]
-type = internal/cpu
-format = <label>
-label = cpu %percentage%%
-
-
-[module/memory]
-type = internal/memory
-label = mem %percentage_used%%
-
-
-[module/wlan]
-type = internal/network
-interface = wls1
-
-format-connected = <label-connected>
-format-disconnected = <label-disconnected>
-format-packetloss = <animation-packetloss> <label-connected>
-
-label-connected = %essid% %downspeed:9%
-label-connected-foreground = #eefafafa
-;label-connected-padding = 10
-
-label-disconnected = not connected
-label-disconnected-foreground = #66ffffff
-
-
-[module/eth]
-type = internal/network
-interface = eth0
-interval = 3.0
-
-format-connected-underline = #55aa55
-format-connected-prefix = " "
-format-connected-prefix-foreground = ${colors.foreground-alt}
-label-connected = %local_ip%
-
-format-disconnected =
-;format-disconnected = <label-disconnected>
-;format-disconnected-underline = ${self.format-connected-underline}
-;label-disconnected = %ifname% disconnected
-;label-disconnected-foreground = ${colors.foreground-alt}
-
 
 [module/date]
 type = internal/date
 interval = 1
 
-date = %d/%m/%Y
-time = %I:%M
-
-label = %date%  %time%
+date = "%b %d"
+time = "%I:%M %p"
+label = %date% %time%
+label-underline = #8C9440
 
 [module/volume]
 type = internal/volume
+interval = 1
 
-format-volume = <label-volume> <bar-volume>
-label-volume = ""
-label-volume-foreground = ${root.foreground}
+format-volume = vol: <label-volume>
+format-volume-underline = #B294BB
+
 label-muted = muted
 
-bar-volume-width = 10
-bar-volume-foreground-0 = #55aa55
-bar-volume-foreground-1 = #55aa55
-bar-volume-foreground-2 = #55aa55
-bar-volume-foreground-3 = #55aa55
-bar-volume-foreground-4 = #55aa55
-bar-volume-foreground-5 = #f5a70a
-bar-volume-foreground-6 = #ff5555
-bar-volume-gradient = false
-bar-volume-indicator = │
-bar-volume-indicator-font = 2
-bar-volume-indicator-foreground = #ff
-bar-volume-fill = ─
-bar-volume-fill-font = 2
-bar-volume-empty = ─
-bar-volume-empty-font = 2
-bar-volume-empty-foreground =
+[module/wlan]
+type = internal/network
+interface = wls1
+interval = 1
 
+format-connected =  <label-connected>
+format-connected-underline = #F0C674
+label-connected = %essid% %downspeed:%
 
 [module/battery]
 type = internal/battery
@@ -187,39 +108,31 @@ adapter = ADP1
 full-at = 99
 
 format-charging = <animation-charging> <label-charging>
-format-charging-underline = #ffb52a
+format-charging-underline = #8ABEB7
 format-discharging = <ramp-capacity> <label-discharging>
-format-full = <ramp-capacity>  <label-full>
+format-discharging-underline = #8ABEB7
+format-full = max
+format-full-underline = #8ABEB7
 label-charging = %percentage%%
 label-discharging = %percentage%%
-label-full = %percentage%%
 
 ramp-capacity-0 = 
 ramp-capacity-1 = 
 ramp-capacity-2 = 
 ramp-capacity-3 = 
 ramp-capacity-4 = 
-ramp-capacity-foreground = ${colors.foreground}
 
 animation-charging-0 = 
 animation-charging-1 = 
 animation-charging-2 = 
 animation-charging-3 = 
 animation-charging-4 = 
-animation-charging-foreground = ${colors.foreground}
 animation-charging-framerate = 750
 
+[module/mpd]
+type = internal/mpd
+host = 127.0.0.1
+port = 6600
 
-[settings]
-screenchange-reload = true
-;compositing-background = xor
-;compositing-background = screen
-;compositing-foreground = source
-;compositing-border = over
-
-
-[global/wm]
-margin-top = 5
-margin-bottom = 5
-
-; vim:ft=dosini
+label-song =  %title% by %artist%
+label-song-underline = #8ABEB7
