added info for net card config

--- a/iwlwifi.conf
+++ b/iwlwifi.conf
@@ -1,5 +1,9 @@
+# this is the network card configuration for the ASUS U52F laptop
+
 options iwlwifi led_mode=2 power_save=0 power_level=5 11n_disable=1 swcrypto=0
 
+# possible configurations:
+# ========================
 # parm:           swcrypto:using crypto in software (default 0 [hardware]) (int)
 # parm:           11n_disable:disable 11n functionality, bitmap: 1: full, 2: disable agg TX, 4: disable agg RX, 8 enable agg TX (uint)
 # parm:           amsdu_size_8K:enable 8K amsdu size (default 0) (int)
